--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -346,9 +346,13 @@ The CRR is a framework for validating conceptual design requirements against CAA
 The goal of the CRR is to build a computational framework that represents and reasons about design requirements in the context of conceptual design requirement validation.     
 
 \section{Design Problem}
-The field of Spatial Computing for Architectural Design \cite{bhatt-spatial-computing} investigates the computation apparatus that is necessary to represent and reasoning about architectural form and function from multiple levels of abstraction: \emph{conceptual}, \emph{qualitative}, and \emph{quantitative}. The semantics at the conceptual level included architectural concepts such as continuity, enclosure, privacy, and visibility, and spatial qualities of orientation, positioning, and proximity, while the semantics at the quantitative level involve general spatial primitives of polygons, lines, and points. The semantics of the qualitative level, the intermediating layer, involve qualitative spatial relationships. The three levels of the design abstraction are referred to in this thesis as the architectural design hierarchy, in which the top level of the hierarchy corresponds to the conceptual, the middle level corresponds to the qualitative, and the bottom level corresponds to the quantitative. The levels are connected to each other because conceptual features at the top level emerge from spatial design patterns at the bottom level. 
+The field of Spatial Computing for Architectural Design \cite{bhatt-spatial-computing} investigates the computation apparatus that is necessary to represent and reasoning about architectural form and function from multiple levels of abstraction: \emph{conceptual}, \emph{qualitative}, and \emph{quantitative}. At the conceptual level the architect perceives the design at a high level of abstraction. For example, at this level the architect would think in terms of spaciousness, privacy, continuity, and visibility. At the quantitative level the architect engages the design at a low level of abstraction. Now the architect considers concrete, physical aspects of the design. These include the geometric shape and spacial location of the design's structural form. These levels of abstraction are referred to in this thesis as the architectural design hierarchy, where the top of the hierarchy corresponds to the conceptual, the middle corresponds to the qualitative, and the bottom corresponds to the quantitative. 
 
-Take for example the architectural concept of spaciousness. At the conceptual level, spaciousness conveys an experiential quality of the design such as the feeling of openness. Such an experiential quality emerges from of the spatial design patterns of the building's physical form. In other words, the location and placement of architectural entities such as walls, ceilings, windows, and doors, and their spatial relationships as they define the size and shape of rooms and spaces, directly affect the experiential quality of openness. In general, changes in the spatial patterns at the quantitative level affect the experiential qualities of the design at the conceptual level. Figure \ref{multi-perspective-reps} illustrates this concept in which the features of the design at the conceptual level emerges from its spatial environment at the quantitative level via spatial patterns on the qualitative level. 
+%These levels are connected to each other because conceptual features at the top level emerge from spatial design patterns at the bottom level. 
+
+%The semantics at the conceptual level included architectural concepts such as continuity, enclosure, privacy, and visibility, and spatial qualities of orientation, positioning, and proximity, while the semantics at the quantitative level involve general spatial primitives of polygons, lines, and points. The semantics of the qualitative level, the intermediating layer, involve qualitative spatial relationships. 
+
+Applying the architectural concept of spaciousness to the architectural design hierarchy to will show how high level concepts are connected to low level spatial quantities. In this example, the concept of spaciousness conveys an experiential quality of the design such as the feeling of openness. Such an experiential quality emerges from of the spatial design patterns of the building's physical form. In other words, the location and placement of architectural entities such as walls, ceilings, windows, and doors, and their spatial relationships as they define the size and shape of rooms and spaces, directly affect the experiential quality of openness. In general, changes in the spatial patterns at the quantitative level affect the experiential qualities of the design at the conceptual level. Figure \ref{multi-perspective-reps} illustrates this concept in which the features of the design at the conceptual level emerges from its spatial environment at the quantitative level via spatial patterns on the qualitative level. 
 
 \begin{figure}[t]
 \centering
@@ -357,20 +361,22 @@ Take for example the architectural concept of spaciousness. At the conceptual le
 \label{multi-perspective-reps}
 \end{figure}
 
-Unfortunately, current state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} do not support the representation of and reasoning about architectural design from a conceptual level. This happens because the CAAD-based design representation model is encapsulated at the quantitative level of the architectural design hierarchy, which lacks the design and spatial semantics necessary for representation and reasoning at higher levels of abstraction. 
+Unfortunately, state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} do not support the representation of and reasoning about architectural design at a conceptual level. This happens because the CAAD-based design representation model is encapsulated at the quantitative level of the architectural design hierarchy, which lacks the semantics necessary for representation and reasoning at higher levels of abstraction. 
 
-While the design representation model of CAAD-based systems is well suited for certain design phases, such as the building of a schematization that will be used as a blueprint for the realization of the design, it does not support other architectural design processes that require reasoning at a higher level of abstraction, such as design conceptualization, requirements reasoning and functional specification to name a few \cite{bhatt-spatial-computing}. Take for example, the tasks an architect might face during the design conceptualization phase of a museum, including, among other things, defining high level functional and aesthetic requirements of the museum's design. The following descriptions of the \emph{Museu Calouste Gulbenkian} in Lisbon, Portugal exemplifies this phase:
+While this model is well suited for certain design tasks, such as the building of an accurate blueprint of the design, it does not support other architectural design processes that require reasoning at a higher level of abstraction. These include design conceptualization, requirements reasoning and functional specification, to name a few \cite{bhatt-spatial-computing}. 
+
+Take for example the tasks an architect might face during the design conceptualization phase of a museum, including, among other things, defining high level functional and aesthetic requirements of the museum's design. The following descriptions of the \emph{Museu Calouste Gulbenkian} in Lisbon, Portugal exemplifies this phase:
 \begin{quote}
 \emph{``The current topographic conditions of the site, where the larger trees are located in an area that is more elevated than the whole northern rim of the plot, made it possible to install a huge underground floor in the already existing depression, whose covering creates a gentle artificial elevation that perspectively accentuates and enhances the whole architectural composition. The distribution of the construction volumes fundamentally followed a desire for horizontality, allowing one to read the continuity of the green space beyond the construction and in all directions.''}
 \end{quote}
 \begin{quote}
 \emph{``This sober, rational and markedly horizontal structure is distinctive for its laminar exterior, its modular repetition, austere design and the hard quality of the materials which shape it, concrete and glass.''}
 \end{quote}
-Environmental aspects of the museums design, such as these expressed in the above description, encompass high level spatial design patterns that are defined at the design conceptualization phase. Because CAAD-based systems do not represent the design semantics at a level of abstraction that is required to express these conceptualization, it is therefore incapable of providing the designer with assistance during the conceptualization phase of the design process.
+Environmental aspects of the museum's design, such as these expressed in the above descriptions, encompass high level spatial design patterns that are identified at the design conceptualization phase. Because CAAD-based systems do not represent the design semantics at a level of abstraction that is required to express these conceptualization, it is therefore incapable of providing the designer with assistance during this phase of the design process.
 
-Design reasoning at a conceptual level of abstraction, such as the example above, requires the underlying model representation semantics at the same level of abstraction. In this regard, the design semantics at the conceptual level involve abstractions over architectural entities such as rooms, floors, buildings, doors, and walls, along with the relationships they share between each other, both spatially, facing, near-to, across-from, connected-to, and non-spatially, material composition, lighting attributes, and load bearing qualities. Conversely, the underlying model representation semantics of CAAD-based system are based on spatially general and low level geometric primitives of points, lines, and polygons that lack the notions at the higher levels of spatial and design abstraction. Where as an architect might conceptualize the design of a museum in terms such as galleries and the relative placement of objects within each gallery, e.g., ``the statue is on the \emph{left-hand-side} of the gallery as one enters from the main doors'', the process of building the museum in a CAAD-based tool restricts the architect to using points, lines and polygons. 
+Design reasoning at a conceptual level, such as the example above, requires the underlying model representation semantics at the same level of abstraction. In this regard, the design semantics at the conceptual level involve abstractions over architectural entities such as rooms, floors, buildings, doors, and walls, along with the relationships they share between each other, both spatially, facing, near-to, across-from, connected-to, and non-spatially, material composition, lighting attributes, and load bearing qualities. Conversely, the underlying model representation semantics of CAAD-based system are based on spatially general and low level geometric primitives of points, lines, and polygons that lack the notions at the higher levels of the architectural design hierarchy. Where as an architect might conceptualize the design of a museum in terms such as galleries and the relative placement of objects within each gallery, e.g., ``the statue is on the \emph{left-hand-side} of the gallery as one enters from the main doors'', the process of building the museum in a CAAD-based tool restricts the architect to using points, lines and polygons. 
 
-The \emph{spatial gap} exemplified here, is the crux of the problem being addressed in this thesis. The following section introduces the scope of this thesis by narrowing it to focus on conceptual requirements reasoning, it outlines the approaches taken towards this goal, and presents the thesis's main contributions. 
+The \emph{semantic gap} exemplified between the conceptual and quantitative levels of the architectural design hierarchy is the crux of the problem being addressed in this thesis. The following section introduces the scope of this thesis by narrowing the focus of the thesis to conceptual requirements reasoning, it outlines the approaches taken towards this goal, and presents the thesis's main contributions. 
 
 %The design semantics at the quantitative level do not represent the design at a level of abstraction that is need to reason at a conceptual level.
 
@@ -381,7 +387,7 @@ The \emph{spatial gap} exemplified here, is the crux of the problem being addres
 
 
 \section{Scope and Contributions}
-The objective of this thesis is an initial step towards building a framework that bridges the gap between a design's conceptual features to its real world quantitative representation (i.e., CAAD-based model). Specifically, the framework, referred to as the Conceptual Requirements Reasoner or CRR, does this in the context of conceptual requirements validation. Conceptual requirements validation involves checking that the underlying spatial structures of a design, in the quantitative representation, are consistent with its conceptual features as they are defined by a designer / architect. Towards this goal the following objectives have been identified as crucial:
+The objective of this thesis is an initial step towards building a framework that bridges the gap between a design's conceptual features to its real world quantitative representation (i.e., CAAD-based model). Specifically, the framework, referred to as the Conceptual Requirements Reasoner or CRR, does this in the context of conceptual requirements validation. Conceptual requirements validation involves checking that the underlying spatial structures of a design, in the quantitative representation, are consistent with its conceptual features as they are specified by a architect. Towards this goal the following objectives have been identified as crucial:
 \begin{itemize}
 \item the identification, formal modeling, and spatial interpretation of architectural concepts
 \item the spatial abstraction and qualification of CAAD-based quantitative models, and
@@ -390,7 +396,7 @@ The objective of this thesis is an initial step towards building a framework tha
 
 To address these objectives, this thesis follows the approach introduced by Bhatt and Freksa \cite{bhatt-spatial-computing}, with regards to Spatial Computing for Architectural Design. This thesis does so by following the design space hierarchy as illustrated in Figure \ref{multi-perspective-reps}, in implementing a framework for validating conceptual requirements against a work-in-progress design. The main contributions in this respect are identified here:
 \begin{itemize}
-\item the implementation of a framework that validates conceptual design requirements against CAAD-based quantitative architectural models
+\item the implementation of a framework that validates conceptual design requirements against a CAAD-based design representation model
 \item the development of a multi-hierarchy that maps architectural concepts at the conceptual level to spatial patterns in the qualitative level
 \item the implementation of spatial constraint solvers for the qualification of CAAD-based quantitative models
 \end{itemize}
