--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -361,9 +361,7 @@ Applying the architectural concept of spaciousness to the architectural design h
 \label{multi-perspective-reps}
 \end{figure}
 
-Unfortunately, state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} do not support the representation of and reasoning about architectural design at a conceptual level. This happens because the CAAD-based design representation model is encapsulated at the quantitative level of the architectural design hierarchy, which lacks the semantics necessary for representation and reasoning at higher levels of abstraction. 
-
-While this model is well suited for certain design tasks, such as the building of an accurate blueprint of the design, it does not support other architectural design processes that require reasoning at a higher level of abstraction. These include design conceptualization, requirements reasoning and functional specification, to name a few \cite{bhatt-spatial-computing}. 
+Unfortunately, state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} do not support the representation of and reasoning about architectural design at a conceptual level. This happens because the CAAD-based design representation model is encapsulated at the quantitative level of the architectural design hierarchy, which lacks the semantics necessary for representation and reasoning at higher levels of abstraction. While this model is well suited for certain design tasks, such as the building of an accurate blueprint of the design, it does not support other architectural design processes that require reasoning at a higher level of abstraction. These include design conceptualization, requirements reasoning and functional specification, to name a few \cite{bhatt-spatial-computing}. 
 
 Take for example the tasks an architect might face during the design conceptualization phase of a museum, including, among other things, defining high level functional and aesthetic requirements of the museum's design. The following descriptions of the \emph{Museu Calouste Gulbenkian} in Lisbon, Portugal exemplifies this phase:
 \begin{quote}
@@ -428,7 +426,7 @@ The following section introduces the high level design and implementation of the
 
 
 \section{Design and Approach}
-The design and implementation of the CRR is based on the design hierarchy as illustrated in Figure \ref{hierarchy no-links}, in which the problem space for conceptual requirements reasoning is broken down into a design space, quality space, and quantitative space. The highest level of the hierarchy, the design space, represents the design concepts and architectural spatial qualities that describe the design from a experiential perspective. In this level of the hierarchy, design concepts are characterized based on architectural spatial qualities. For example, the concept of privacy in an architectural context, is characterized based on the architectural spatial qualities of facing, positioning and visibility. The middle level of the hierarchy, the quality space, represents the design based on qualitative spatial relationships of orientation, topology and distance. Qualitative spatial relationships, in the CRR, are defined using formal qualitative spatial calculi such as the Region Connection Calculus for topological relationships, the Single Cross Calculus for extrinsic orientational relationships and the Oriented Point Relational Algebra for intrinsic orientational relationships. The lowest level of the hierarchy, the quantity space, represents the design in terms of its precise spatial geometries. This representation is similar to what is represented in a CAAD-based system.
+The design and implementation of the CRR is based on the design hierarchy as illustrated in Figure \ref{hierarchy no-links}. As with the architectural design hierarchy, the CRR breaks the problem down into a design space module, quality space module, and quantitative space module. At the top level, the design space model is responsible for the representation of and reasoning about architectural concepts and spatial qualities found in architecture. This module will be used as the basis for building conceptual requirements. The middle level of the hierarchy, the quality space module, represents the design based on qualitative spatial relationships of orientation, topology and distance. Within the CRR, qualitative spatial relationships are defined using formal qualitative spatial calculi such as the Region Connection Calculus for topological relationships, the Single Cross Calculus for extrinsic orientational relationships and the Oriented Point Relational Algebra for intrinsic orientational relationships. The lowest level of the hierarchy, the quantity space module, is responsible for representing the design in terms of its physical and artefactual form.
 
 \begin{figure}[t]
 \centering
@@ -437,9 +435,11 @@ The design and implementation of the CRR is based on the design hierarchy as ill
 \label{hierarchy no-links}
 \end{figure}
 
-Given the three hierarchical levels of the design space, the main issue now becomes how each level is connected to and interfaces with each other. In other words, how do concepts in the design space relate to qualitative spatial relationships in the quality space, and similarly, how do qualitative spatial relationships in the quality space relate to geometric objects in the quantity space. At the core of this is the qualitative spatial level, an intermediary layer that interfaces between the highest and lowest levels of the design hierarchy. 
+Given these three modules, the main issue now becomes how each level interfaces with each other. In other words, how do concepts in the design space relate to qualitative spatial relationships in the quality space, and similarly, how do qualitative spatial relationships in the quality space relate to geometric objects in the quantity space. At the core of this is the qualitative module, an intermediary layer that interfaces between the design and quantitative modules. 
 
-The conceptual and qualitative levels of the design hierarchy are connected through an individual mapping of each concept and spatial quality to qualitative spatial design patterns. In other words, concepts in the design space are explicitly defined based on the spatial relationships at the qualitative level. Take for example the architectural spatial quality of positioning, where objects can be spatially situated at the same or opposing sides of a room. The positioning quality is defined in the CRR based on extrinsic orientational spatial patterns as interpreted by an architect. Chapter \ref{conceptual requirements} will go into further detail regarding the specific spatial interpretation and characterization of each concept and spatial quality as identified in the thesis.
+Architectural concepts and spatial qualities found in architecture are linked to qualitative spatial relationships of orientation, topology and distance by explicit characterization of each concept and quality to qualitative spatial patterns. In other words, concepts in the design space are explicitly defined based on the spatial relationships at the qualitative level. Take for example the architectural spatial quality of positioning, where objects can be spatially situated at the same or opposing sides of a room. The positioning quality is defined in the CRR based on extrinsic orientational spatial patterns as interpreted by an architect. Chapter \ref{conceptual requirements} will go into further detail regarding the specific spatial interpretation and characterization of each concept and spatial quality as identified in the thesis.
+
+%The conceptual and qualitative levels of the design hierarchy are connected through an individual mapping of each concept and spatial quality to qualitative spatial design patterns.
 
 %One interpretation of this quality is based on extrinsic orientational spatial patterns that are based on qualitative spatial relationships. In this case, the orientational relationships of the structural form define the design's positioning qualities. 
 
@@ -451,7 +451,7 @@ The conceptual and qualitative levels of the design hierarchy are connected thro
 \label{hierarchy}
 \end{figure}
 
-The geometric quantities in the quantitative level are connected to the qualitative spatial relationships in the qualitative level through spatial abstraction and qualification. This process involves abstracting the quantitative geometries of the design to abstract spatial objects that can be used for qualification of spatial relationships. Chapter \ref{representation and reasoning}  will go into the details regarding the CRR's underlying spatial representation structure at the quantitative level and the spatial reasoning necessary to spatially abstract and qualify the quantitative representation.  
+The geometric quantities in the quantitative level are connected to the qualitative spatial relationships in the qualitative level through spatial abstraction and qualification. This process involves abstracting the quantitative representation of the design to an abstract spatial representation that can be used for spatial qualification. Chapter \ref{representation and reasoning}  will go into the details regarding the CRR's underlying spatial representation structure at the quantitative level and the spatial reasoning necessary to spatially abstract and qualify the quantitative representation.  
 
 \begin{figure}[t]
 \centering
@@ -460,10 +460,7 @@ The geometric quantities in the quantitative level are connected to the qualitat
 \label{crr design implementation}
 \end{figure}
 
-The implementation of the CRR is broken down into three modules as specified in the design hierarchy, and is illustrated in Figure \ref{crr design implementation}. The top level module is where architectural concepts and spatial qualities are defined in terms of qualitative spatial patterns and is the interface through which  users will query the CRR. The quantitative space module represents the design's precise geometries as defined in a CAAD-based system. The data at this level is imported from a multi-modal access framework \cite{carl} based on the IFC standard for CAAD-based systems. The qualitative space module is responsible for the spatial abstraction and qualification of the quantitative model and is implemented as a series of spatial constraint solvers for topological, orientational, and distance reasoning. 
-
-
-
+The implementation of the CRR is broken down into three modules as identified in the design hierarchy, and is illustrated in Figure \ref{crr design implementation}. The top level module is where architectural concepts and spatial qualities are defined in terms of qualitative spatial patterns and is the interface through which  users will query the CRR. The quantitative space module represents the design's physical form and artefactual extension. The data at this level is imported from a multi-modal access framework \cite{carl} based on the IFC standard for CAAD-based systems. The qualitative space module is responsible for the spatial abstraction and qualification of the quantitative model and is implemented as a series of spatial constraint solvers for topological, orientational, and distance reasoning. 
 
 From a user perspective, the CRR provides a designer with design assistance for a work-in-progress design. The CRR does this through a query engine that allows a designer to validate conceptual requirements. For example, a designer is provided with a set of architectural concepts and spatial qualities, which the designer uses to construct queries to the CRR. For example if a designer wants to check if a door and window are facing each other (as might be a requirement for air circulation purposes) the designer can simply makes the following query to the CRR:
 \begin{verbatim}
